# self_bot

./: .gitignore  README.md  bot.session  main.py  output.html  pyproject.toml  teste.py
handlers/: client.py
handlers/plugins/: __init__.py  anilist.py  get_video.py  info.py
handlers/tools/: clear.py  convert_size.py  convert_video.py  download_video.py  import_modules.py  load_plugins.py  my_sites.py  soup.py
